--- a/.github/workflows/build-push-docker.yml
+++ b/.github/workflows/build-push-docker.yml
@@ -17,7 +17,7 @@ jobs:
         run: docker build -t ghcr.io/nroshan88/Greenbone-task:latest .
 
       - name: Log in to GHCR
-        run: echo ${{ secrets.GITHUB_TOKEN }} | docker login ghcr.io -u nroshan88 --password-stdin
+        run: echo ${{ secrets.PAT }} | docker login ghcr.io -u nroshan88 --password-stdin
 
       - name: Push Docker image
         run: docker push ghcr.io/nroshan88/Greenbone-task:latest 
