--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,4 +24,6 @@ jobs:
       - name: Commit changes
         run: git commit -m "Replace 'tag 1' with 'tag 2'"
       - name: Push changes
+        env:
+          PAT_TOKEN: ${{ secrets.PAT }}
         run: git push origin main
