--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,4 +26,8 @@ jobs:
       - name: Push changes
         env:
           PAT: ${{ secrets.PAT }}
-        run: git push origin main
+        run: |
+          git push https://github.com/nr/Gree-task.git HEAD:main
+          # Use the PAT for authentication
+          # Replace `YOUR_PAT_HERE` with the name of your secret
+          git push https://github.com/nr/Gree-task.git HEAD:main --quiet --set-upstream origin ${{ secrets.PAT }}
