--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,8 +24,10 @@ jobs:
       - name: Commit changes
         run: git commit -m "Replace 'tag 1' with 'tag 2'"
       - name: Push changes
-        env:
-            GIT_SSH_COMMAND: 'ssh -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null -i ${{ secrets.PAT }}'
         run: |
-          git push origin main
+          git push https://github.com/nroshan88/Greenbone-task.git HEAD:main
+          # Use the PAT for authentication
+          # Replace `YOUR_PAT_HERE` with the name of your secret
+          git push https://github.com/nroshan88/Greenbone-task.git HEAD:main --quiet --set-upstream origin ${{ secrets.PAT }}
+
 
