--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,9 +25,9 @@ jobs:
         run: git commit -m "Replace 'tag 1' with 'tag 2'"
       - name: Push changes
         run: |
-          git push https://github.com/nroshan88/Greenbone-task.git HEAD:main
+          #git push https://github.com/nroshan88/Greenbone-task.git HEAD:main
           # Use the PAT for authentication
           # Replace `YOUR_PAT_HERE` with the name of your secret
-          git push https://github.com/nroshan88/Greenbone-task.git HEAD:main --quiet --set-upstream origin ${{ secrets.PAT }}
-
+          #git push https://github.com/nroshan88/Greenbone-task.git HEAD:main --quiet --set-upstream origin ${{ secrets.PAT }}
+          git push origin main
 
