--- a/.github/workflows/reusable-workflow.yml
+++ b/.github/workflows/reusable-workflow.yml
@@ -15,8 +15,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: use-reusable  # Specify the dependency on the "use-reusable" job
     steps:
-      - name: Call build-push workflow
-        uses: ./build-push-docker.yml
+      - name: Build and Push Docker Image
+        uses: ./.github/workflows/build-push-docker.yml
 
 
 
