--- a/.github/workflows/reusable-workflow.yml
+++ b/.github/workflows/reusable-workflow.yml
@@ -10,13 +10,13 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
       - name: Use main workflow
-        uses: ./.github/workflows/replace-tag.yml
+        uses: ./.github/workflows/replace-tag
   build-and-push:
     runs-on: ubuntu-latest
-    needs: use-reusable  # Specify the dependency on the "use-reusable" job
+    needs: use-reusable  
     steps:
       - name: Build and Push Docker Image
-        uses: ./.github/workflows/build-push-docker.yml
+        uses: ./.github/workflows/build-push-docker
 
 
 
