--- a/.github/workflows/reusable-workflow.yml
+++ b/.github/workflows/reusable-workflow.yml
@@ -4,19 +4,21 @@ on:
     branches:
       - main
 jobs:
-  use-reusable:
+  use-replace-tag:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
       - name: Use main workflow
-        uses: ./actions/replace-tag
-  build-and-push:
+        uses: ./.github/workflows/replace-tag.yml
+  use-build-and-push:
     runs-on: ubuntu-latest
-    needs: use-reusable  
+    needs: use-replace-tag
     steps:
-      - name: Build and Push Docker Image
-        uses: ./actions/build-and-push
+      - name: Checkout repository
+        uses: actions/checkout@v2
+      - name: Use build-and-push workflow
+        uses: ./.github/workflows/build-push-docker.yml
 
 
 
