--- a/.github/workflows/reusable-workflow.yml
+++ b/.github/workflows/reusable-workflow.yml
@@ -28,17 +28,14 @@ jobs:
         run: git commit -m "Replace 'tag 1' with 'tag 2'"
       - name: Push changes
         run: |
-          #git push https://github.com/nroshan88/Greenbone-task.git HEAD:main
-          # Use the PAT for authentication
-          # Replace `YOUR_PAT_HERE` with the name of your secret
-          #git push https://github.com/nroshan88/Greenbone-task.git HEAD:main --quiet --set-upstream origin ${{ secrets.PAT }}
           git push origin main
+          
   use-build-and-push:
     runs-on: ubuntu-latest
     needs: use-replace-tag
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
+      #- name: Checkout repository
+      #  uses: actions/checkout@v2
 
       - name: Build Docker image
         run: |
