--- a/.github/workflows/reusable-workflow.yml
+++ b/.github/workflows/reusable-workflow.yml
@@ -17,6 +17,11 @@ jobs:
           file: sample-file.txt
           old-string: "tag 1"
           new-string: "tag 2"
+      - name: Upload modified file
+        uses: actions/upload-artifact@v2
+        with:
+          name: modified-file
+          path: modified-file.txt
       - name: Pull latest changes
         run: git pull origin main
       - name: Set Git user
@@ -35,8 +40,16 @@ jobs:
     runs-on: ubuntu-latest
     needs: use-replace-tag
     steps:
-      #- name: Checkout repository
-      #  uses: actions/checkout@v2
+      - name: Checkout repository
+        uses: actions/checkout@v2
+      - name: Download modified file artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: modified-file
+          path: modified-file.txt
+      - name: Update Dockerfile
+        run: |
+          echo "COPY modified-file.txt /usr/local/app/modified-file.txt" >> Dockerfile
 
       - name: Build Docker image
         run: |
