--- a/.github/workflows/reusable-workflow.yml
+++ b/.github/workflows/reusable-workflow.yml
@@ -44,10 +44,10 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: modified-file
-          path: sample-file.txt
+          path: sample-modiefied-file.txt
       - name: Update Dockerfile
         run: |
-          echo "COPY sample-file.txt /usr/local/app/modified-file.txt" >> Dockerfile
+          echo "COPY sample-modified-file.txt /usr/local/app/modified-file.txt" >> Dockerfile
 
       - name: Build Docker image
         run: |
