--- a/.github/workflows/task-workflow.yml
+++ b/.github/workflows/task-workflow.yml
@@ -9,30 +9,24 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
-      - name: Pull latest changes
-        run: git pull origin main
-      - name: Replace string in file
+      - name: Replace strings in file
         uses: MathieuSoysal/replace-string-in-file@v1.0.0
         with:
           file: sample-file.txt
           old-string: "tag 1"
           new-string: "tag 2"
-      - name: Upload modified file
-        uses: actions/upload-artifact@v2
-        with:
-          name: modified-file
-          path: sample-file.txt
-      - name: Set Git user
-        run: |
-          git config user.name "nroshan88"
-          git config user.email "nagishetty.roshan@gmail.com"
+
       - name: Stage changes
-        run: git add sample-file.txt
-      - name: Commit changes
-        run: git commit -m "Replace 'tag 1' with 'tag 2'"
+        uses: EndBug/add-and-commit@v7
+        with:
+          message: "Replace 'tag 1' with 'tag 2' in sample-file.txt"
+          author_name: ${{ secrets.repo_owner }}
+          author_email: ${{ secrets.repo_owner_email }}
+
       - name: Push changes
-        run: |
-          git push origin main
+        uses: ad-m/github-push-action@master
+        with:
+          github_token: ${{ secrets.PAT }}
           
   use-build-and-push:
     runs-on: ubuntu-latest
@@ -40,26 +34,30 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
+
       - name: Download modified file artifact
         uses: actions/download-artifact@v2
         with:
           name: modified-file
           path: sample-modified-file.txt
+
       - name: Update Dockerfile
         run: |
           echo "COPY sample-modified-file.txt /usr/local/app/modified-file.txt" >> Dockerfile
 
-      - name: Build Docker image
-        run: |
-            echo "build docker image"
-            docker build -t ghcr.io/nroshan88/greenbone-task:latest .
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
 
       - name: Log in to GHCR
-        run: |
-            echo "login to ghcr"
-            echo ${{ secrets.PAT }} | docker login ghcr.io -u nroshan88 --password-stdin
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ secrets.repo_owner }}
+          password: ${{ secrets.PAT }}
 
-      - name: Push Docker image
-        run: docker push ghcr.io/nroshan88/greenbone-task:latest
+      - name: Push Docker image to GHCR
+        run: docker push ghcr.io/${{ secrets.repo_owner }}/greenbone-task:latest
+
+      
 
 
