--- a/.github/workflows/task-workflow.yml
+++ b/.github/workflows/task-workflow.yml
@@ -49,8 +49,13 @@ jobs:
         run: |
           echo "COPY sample-modified-file.txt /usr/local/app/modified-file.txt" >> Dockerfile
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+      - name: Build Docker image
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          file: ./Dockerfile
+          tags: ghcr.io/ ${{ secrets.repo_owner }}/greenbone-task:latest
+
 
       - name: Log in to GHCR
         uses: docker/login-action@v2
